--- a/src/components/LabeledConfig/LabeledConfig.module.scss
+++ b/src/components/LabeledConfig/LabeledConfig.module.scss
@@ -14,8 +14,6 @@
   }
 
   .config {
-    width: 226px;
-
     & > * {
       width: 100%;
     }
