--- a/src/components/LabeledConfigurations/DropDownConfig/DropDownConfig.module.scss
+++ b/src/components/LabeledConfigurations/DropDownConfig/DropDownConfig.module.scss
@@ -11,7 +11,7 @@
   }
 
   select {
-    width: 100%;
+    width: 226px;
     padding: 10px 16px;
 
     border: 1px solid #b2bbd580;
