--- a/src/components/LabeledConfigurations/ToggleConfig/ToggleConfig.module.scss
+++ b/src/components/LabeledConfigurations/ToggleConfig/ToggleConfig.module.scss
@@ -10,6 +10,7 @@
     border: var(--border);
     border-radius: 4px;
     background-color: #e0e4f2b9;
+    width: 184px;
 
     .button {
       flex: 1;
